src/objects/QPMS__All_Manufacturers__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__ANDA__c</fullName>
        <label>ANDA #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Adverse_Event_Term__c</fullName>
        <description>Adverse Event Term(s)</description>
        <inlineHelpText>Adverse Event Term(s)</inlineHelpText>
        <label>G7. Adverse Event Term(s)</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Adverse_Event_Term_s__c</fullName>
        <label>G7. Adverse Event Term(s)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Combination_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Combination Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Company_Representative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Representative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__ComplaintId__c</fullName>
        <formula>QPMS__Regulatory_Report__r.QPMS__Complaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComplaintId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Compounded_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Compounded Product</description>
        <inlineHelpText>Compounded Product</inlineHelpText>
        <label>Compounded Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Consumer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consumer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Address_Line_1__c</fullName>
        <label>Address - Line 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Address_Line_2__c</fullName>
        <label>Address - Line 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States of America</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Email_Address__c</fullName>
        <description>Email Address</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Establishment_Name__c</fullName>
        <description>Establishment Name</description>
        <label>Establishment Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_First_Given_Name__c</fullName>
        <description>First/Given Name</description>
        <label>First/Given Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Last_Name__c</fullName>
        <description>Last Name</description>
        <label>Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Middle_Name__c</fullName>
        <description>Middle Name</description>
        <label>Middle Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Office__c</fullName>
        <label>Contact Office</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_Post_Office_Or_Zip_Code__c</fullName>
        <label>Post Office Or Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_State_Province_or_Territory__c</fullName>
        <label>State, Province, or Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QPMS__Contact_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Andra</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Date_Received_by_Manufacturer__c</fullName>
        <label>Date Received by Manufacturer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Device_BLA_Number__c</fullName>
        <description>Device BLA Number</description>
        <inlineHelpText>Device BLA Number</inlineHelpText>
        <label>Device BLA Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Distributor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Fax_Number__c</fullName>
        <description>Fax Number</description>
        <inlineHelpText>Fax Number</inlineHelpText>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Number__c</fullName>
        <description>followup number</description>
        <formula>TEXT( QPMS__Regulatory_Report__r.QPMS__Follow_Up_Number__c )</formula>
        <label>Follow Up Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow-up#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Foregin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foregin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Health_Professional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health Professional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__IND__c</fullName>
        <label>IND #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__If_IND_Give_Protocol__c</fullName>
        <label>If IND, Give Protocol #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Literature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Literature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturer_Report_Number__c</fullName>
        <label>G8. Manufacturer Report Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturin_State_Province_or_Territory__c</fullName>
        <label>State, Province, or Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QPMS__Manufacturing_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Andra</fullName>
                </value>
                <value>
                    <fullName>Goa</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Address_Line_1__c</fullName>
        <label>Address - Line 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Address_Line_2__c</fullName>
        <label>Address - Line 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>United States of America</fullName>
                </value>
                <value>
                    <fullName>WEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Establishment_Name__c</fullName>
        <description>Establishment Name</description>
        <label>Establishment Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Fax_Number__c</fullName>
        <description>Fax Number</description>
        <inlineHelpText>Fax Number</inlineHelpText>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__Manufacturing_Post_Office_Or_Zip_Code__c</fullName>
        <label>Post Office Or Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__NDA__c</fullName>
        <description>NDA</description>
        <inlineHelpText>NDA</inlineHelpText>
        <label>NDA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__OTC_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OTC Product</description>
        <inlineHelpText>OTC Product</inlineHelpText>
        <label>OTC Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Others__c</fullName>
        <label>Others</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__PMA_510_k__c</fullName>
        <label>PMA/510(k) #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Periodic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Periodic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__Pre_1938__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pre-1938:Yes</description>
        <inlineHelpText>Pre-1938:Yes</inlineHelpText>
        <label>Pre-1938</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Pre_ANDA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pre-ANDA</description>
        <inlineHelpText>Pre-ANDA</inlineHelpText>
        <label>Pre-ANDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <formula>QPMS__Regulatory_Report__r.QPMS__Regulatory_Body__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the regulatory report value</description>
        <label>Regulatory Report</label>
        <referenceTo>QPMS__Regulatory_Report__c</referenceTo>
        <relationshipLabel>All Manufacturers</relationshipLabel>
        <relationshipName>All_Manufacturers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Study__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Study</description>
        <inlineHelpText>Study</inlineHelpText>
        <label>Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__TOR_15_day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>15-day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__TOR_30_day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>30-day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__TOR_5_day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>5-day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Title_e_g_Mr_Ms__c</fullName>
        <description>Title (e.g.,Mr.,Ms.)</description>
        <label>Title (e.g.,Mr.,Ms.)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__User_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Facility</label>
        <type>Checkbox</type>
    </fields>
    <label>All Manufacturers</label>
    <nameField>
        <label>All Manufacturers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>All Manufacturers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>